force-app/main/default/objects/Approval_Record__c/Approval_Record__c.object-meta.xml
<CustomObject>
    <label>Approval Record</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aproval Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>