force-app/main/default/objects/Approval_Record__c/fields/Approval_Name__c.field-meta.xml
<CustomField>
    <fullName>Approval_Name__c</fullName>
    <label>Approval Name</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>