force-app/main/default/objects/Approval_Record__c/fields/Aprvlid__c.field-meta.xml
<CustomField>
    <fullName>Aprvlid__c</fullName>
    <label>Aprvlid</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>