force-app/main/default/objects/Approval_Record__c/fields/Number_of_approvers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_approvers__c</fullName>
    <label>Number of approvers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>