force-app/main/default/objects/Approval_Record__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assigned for Approval</fullName>
            </value>
            <value>
                <fullName>Pending,</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>rejected</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>