force-app/main/default/objects/Approval_Record__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T1</fullName>
            </value>
            <value>
                <fullName>T2</fullName>
            </value>
            <value>
                <fullName>T3</fullName>
            </value>
            <value>
                <fullName>T4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>