force-app/main/default/objects/Approval_Record__c/fields/X1st_Approver__c.field-meta.xml
<CustomField>
    <fullName>X1st_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>1st Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Aproval_Records</relationshipName>
    <type>Lookup</type>
</CustomField>