force-app/main/default/objects/Approval_Record__c/fields/X2nd_Approver__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2nd Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Aproval_Records1</relationshipName>
    <type>Lookup</type>
</CustomField>