force-app/main/default/objects/Approval_Record__c/fields/X3rd_Approver__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3rd Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Aproval_Records2</relationshipName>
    <type>Lookup</type>
</CustomField>