force-app/main/default/objects/Approval_Record__c/fields/X4th_Approver__c.field-meta.xml
<CustomField>
    <fullName>X4th_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>4th Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Aproval_Records3</relationshipName>
    <type>Lookup</type>
</CustomField>